--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,13 +91,13 @@ a {
       0.3s border-top-color;
   }
   
-.navbar-title:hover { 
-    background: var(--backgroud-color);
+/* .navbar-title:hover { 
+    background: var();
    }
 
 .navbar-title:hover:before { 
     border-top-color: var(); 
-}
+} */
 
 .navbar:hover > .navbar-title:before {
     border-top-width: 0;
@@ -238,130 +238,6 @@ nav a:hover {
     background-color: var();
   }
 
-
-/* .area{
-    background: var(--header-backgroud);  
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8); 
-    width: 100%;
- } */
-
- /* background effect */
-
-/* .circles{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden; 
-}
-
-.circles li{
-    position: absolute;
-    display: block;
-    list-style: none;
-    width: 20px;
-    height: 20px;
-    background: rgba(255, 255, 255, 0.2);
-    animation: animate 25s linear infinite;
-    bottom: -80px;
-    
-}
-
-.circles li:nth-child(1){
-    left: 25%;
-    width: 40px;
-    height: 40px;
-    animation-delay: 0s;
-}
-
-
-.circles li:nth-child(2){
-    left: 10%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 0.1s;
-    animation-duration: 12s;
-}
-
-.circles li:nth-child(3){
-    left: 70%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 0.3s;
-}
-
-.circles li:nth-child(4){
-    left: 40%;
-    width: 50px;
-    height: 50px;
-    animation-delay: 0s;
-    animation-duration: 18s;
-}
-
-.circles li:nth-child(5){
-    left: 65%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 0s;
-}
-
-.circles li:nth-child(6){
-    left: 75%;
-    width: 60px;
-    height: 60px;
-    animation-delay: 0.2s;
-}
-
-.circles li:nth-child(7){
-    left: 35%;
-    width: 80px;
-    height: 80px;
-    animation-delay: 0.5s;
-}
-
-.circles li:nth-child(8){
-    left: 50%;
-    width: 25px;
-    height: 25px;
-    animation-delay: 0.8s;
-    animation-duration: 45s;
-}
-
-.circles li:nth-child(9){
-    left: 20%;
-    width: 15px;
-    height: 15px;
-    animation-delay: 0.1s;
-    animation-duration: 35s;
-}
-
-.circles li:nth-child(10){
-    left: 85%;
-    width: 80px;
-    height: 80px;
-    animation-delay: 0s;
-    animation-duration: 11s;
-}
-
-
-
-@keyframes animate {
-
-    0%{
-        transform: translateY(0) rotate(0deg);
-        opacity: 80;
-        border-radius: 0;
-    }
-
-    100%{
-        transform: translateY(-1000px) rotate(720deg);
-        opacity: 0;
-        border-radius: 50%;
-    }
-
-} */
-
 /* block */
 
 /* main {
@@ -393,7 +269,7 @@ nav a:hover {
     /* flex: 0 0 300px; */
     /* transform: rotate(8deg); */
     box-shadow: 10px 10px 5px #aaaaaa;
-    /* margin: 20px; */
+    margin-bottom: 10%;
     width: 25%;
     min-height: 100%;
   }
@@ -403,18 +279,19 @@ nav a:hover {
   }
 
   .footer{
+    display:grid;
     position:fixed;
-    bottom:5px;
+    bottom:0px;
     /* border-style:dotted; */
-    border-width: 1px;
-    border-radius: var(--standard-border-radius);
+    /* border-width: 1px;
+    border-radius: var(--standard-border-radius); */
     /* padding: 10px; */
     /* flex: 0 0 300px; */
     /* transform: rotate(8deg); */
     /* box-shadow: 10px 10px 5px #aaaaaa; */
     /* margin: 20px; */
     width: 100%;
-    height: 10%;
+    height: 6%;
   }
 
   /* .card3{
@@ -442,7 +319,7 @@ nav a:hover {
     /* flex: 0 0 300px; */
     /* transform: rotate(8deg); */
     box-shadow: 10px 10px 5px #aaaaaa;
-    /* margin: 20px; */
+    margin-bottom: 10%;
     /* height: 54%; */
     width: 70%;
   }
@@ -453,7 +330,7 @@ nav a:hover {
   }
   .footer > header {
     border-radius: var(--standard-border-radius) var(--standard-border-radius) 0px 0px;
-    padding: 20px;
+    padding: 5px;
   }
   
   .card > p {
