add margin to project container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,6 +359,7 @@ a:hover {
         flex-wrap: wrap;
         justify-content: flex-start;
         min-height: 50vh;
+        margin-left: 30px;
     }
 
     .item {
