--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,23 +5,27 @@
     --header-color: rgb(58, 42, 145);
     --lightbackground-color: rgb(240, 240, 223);
     --standard-border-radius: 15px 15px 0 0;
-}
+  }
 
 * {
-  box-sizing: border-box;
-}
+    font-family: ’Lato’, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
 
 body {
     margin: 0 auto;
     font-family: 'Roboto', sans-serif;
     color: var(--hightlight-color);
-}
+  }
 
 h1 {
     font-family: cursive;
     font-size: 2rem;
     margin-bottom: 10px;
-}
+  }
 
 header {
     padding :30px;
@@ -30,42 +34,36 @@ header {
     text-align: center;
     text-shadow: 5px 5px 10px rgb(10, 11, 9);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+  } 
 
 a {
-  text-decoration: none;
-  color: inherit;
-}
+    text-decoration: none;
+    color: inherit;
+  }
 
 nav {
-  display: flex;
-  background-color: #d8a47f;
-  border-radius: 15px 15px 15px 15px;
-  width: auto;
-  margin-top: 22px;
-  margin-inline: auto;
-}
+    display: flex;
+    background-color: #d8a47f;
+    border-radius: 15px 15px 15px 15px;
+    width: auto;
+    margin-top: 22px;
+    margin-inline: auto;
+  }
 
 nav a {
-  color: var(--header-background);
-  text-decoration: none;
-  text-align: auto;
-  /* display: flex; */
-  margin: 0 30px 0 30px;
-}
+    color: var(--header-background);
+    text-decoration: none;
+    text-align: auto;
+    /* display: flex; */
+    margin: 0 30px 0 30px;
+  }
 
 nav a:hover {
-  background-color: var();
-}
-
-.navbar {
-  display: block;
-  position: relative;
-  cursor: pointer;
-}
+    background-color: var();
+  }
 
 .navbar-title {
-    display: block;
+    /* display: block; */
     width:auto;
     height: 40px;
     padding: 12px 0 0;
@@ -77,53 +75,6 @@ nav a:hover {
     transition: 0.3s background-color;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: larger;
-}
-
-.navbar-title:before {
-    content: "";
-    display: block;
-    height: 0;
-    border-top: 5px solid #9dc852;
-    border-left: (navbar_WIDTH / 2) solid transparent;
-    border-right: (navbar_WIDTH / 2) solid transparent;
-    border-bottom: 0 solid #dddddd;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    z-index: 101;
-    transition:
-      0.2s 0.2s border-top ease-out,
-      0.3s border-top-color;
-  }
-
-.navbar-title:hover:before {
-    border-top-color: var();
-}
-
-.navbar:hover > .navbar-title:before {
-    border-top-width: 0;
-    transition:
-      0.2s border-top-width ease-in,
-      0.3s border-top-color;
-  }
-
-.navbar-title:after {
-    content: "";
-    display: block;
-    height: 0;
-    border-left: (navbar_WIDTH / 2) solid transparent;
-    border-right: (navbar_WIDTH / 2) solid transparent;
-    border-bottom: 0 solid #ebebeb;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    z-index: 101;
-    transition: 0.2s border-bottom ease-in;
-  }
-
-.navbar:hover > .navbar-title:after {
-    border-bottom-width: 5px;
-    transition: 0.2s 0.2s border-bottom-width ease-out;
   }
 
 .navbar-dropdown {
@@ -139,32 +90,10 @@ nav a:hover {
       text-align: center;
 }
 
-.navbar-dropdown:after {
-    content: "";
-    display: block;
-    height: 0;
-    border-top: 5px solid #ebebeb;
-    border-left: (navbar_WIDTH / 2) solid transparent;
-    border-right: (navbar_WIDTH / 2) solid transparent;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    z-index: 101;
-    transition: 0.5s border-top;
-  }
-
 .navbar:not(:hover) > .navbar-dropdown {
     padding: 4px 0;
     background:none;
     z-index: 99;
-  }
-
-.navbar:not(:hover) > .navbar-dropdown:after {
-    border-top-color: var(--hightlight-color);
-  }
-
-  .navbar:not(:hover) > .navbar-title:after {
-    border-bottom-color: var(--backgroud-color);
   }
 
 .navbar-dropdown > * {
@@ -218,20 +147,7 @@ nav a:hover {
     font-style: italic;
     font-weight: bolder;
     border-radius: var(--standard-border-radius);
-}
-
-/* .menu > header {
-  border-radius: var(--standard-border-radius) var(--standard-border-radius) 0px 0px;
-  padding: 20px;
-} */
-
-.menu > p {
-  text-align: center;
-}
-
-.menu > img {
-  width: 100%;
-}
+  }
 
 .menu-content1{
     /* position:absolute; */
@@ -247,7 +163,7 @@ nav a:hover {
     min-height: 100%;
   }
 
-  .menu-content2{
+.menu-content2{
     /* position:absolute; */
     right: 5px;
     bottom:12%;
@@ -260,157 +176,66 @@ nav a:hover {
     width: 70%;
   }
 
-  main p {
-    margin: 50px;
+main p {
+    margin-top: 50px;
+    text-align: center;
   }
 
-  .footer{
-    /* display:grid; */
-    position:fixed;
-    bottom: 0;
-    /* border-style:dotted; */
-    /* border-width: 1px;
-    border-radius: var(--standard-border-radius); */
-    /* padding: 10px; */
-    /* flex: 0 0 300px; */
-    /* transform: rotate(8deg); */
-    /* box-shadow: 10px 10px 5px #aaaaaa; */
-    /* margin: 20px; */
-    width: 100%;
-    /* height: auto; */
+.work-content{
+    margin-top: 5%;
+    display:flex;
+    flex-direction:row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    min-height: 65vh;
+    margin-left: 5%;
+    margin-right: 5%;
   }
-  * {
-    box-sizing: border-box;
-    font-family: ’Lato’, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-ul {
-    list-style: none;
-    padding-left: 0;
-}
-footer {
-    background-color: var(--backgroud-color);
-    color: #bbb;
-    line-height: 1.2;
-}
 
-footer a {
-    text-decoration: none;
-    color: rgb(240, 240, 223);
-}
-a:hover {
-    text-decoration: underline;
-}
-.ft-title {
-    color: #fff;
-    font-family: ’Merriweather’, serif;
-    font-size: 1rem;
-    padding-bottom: 0.625rem;
-}
+.project {
+    margin: 14px 0 0 20px;
+    padding: 10px;
+    border: 1px dotted black;
+    color: var(--header-background);
+    font-family: fantasy;
+    font-weight: bolder;
+    text-shadow: 8px -5px 4px  rgb(182, 182, 182);
+    height: 25vh;
+     /* flex: 0 0 47%; */
+    max-width: 100%;
+    max-height: 100%;
+    min-width: 25vw;
+  }
 
-.ft-main {
-  padding: 1.25rem 1.875rem;
-  display: flex;
-  flex-wrap: wrap;
-}
-.ft-main-item { 
-  padding: 1.25rem;
-  min-width: 12.5rem ;
-} 
+.project {
+    margin-left: 5%;
+    background-image: url("https://images.unsplash.com/photo-1572177812156-58036aae439c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* margin:30px 10px 10px 20px; */
+  }
 
-.ft-info {
-  /* padding: 0.9375rem 1.875rem; */
-  background-color:var(--hightlight-color);
-}
-.ft-info-list {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-}
-.ft-info-list li {
-  margin: 0.125rem 0.625rem;
-  white-space: nowrap;
-}
-/* one before the last child */
-.ft-info-list li:nth-last-child(2) {
-  flex: 1;       /* same as flex-grow: 1; */
-}
+    /* project box change larger when hovering */
+.project:hover {
+    margin:5px;
+    transform: scale(1.1,1.1);
+  }
+
 
 
   /* glow effect */
-
-  .item .menu-header {
+.project .menu-header {
     border-radius: 8px;
     transition: all 0.5s ease-in-
-  out;
+    out;
   }
-
-  .item:hover,
-  .item:hover .menu-header {
+  
+.project:hover,
+.project:hover .menu-header {
     box-shadow: inset 0px 0px 25px
     var(--backgroud-color), 0 0 25px
-        var(--hightlight-color);
+    var(--hightlight-color);
   }
-
-    .flex-container {
-        display:flex;
-        flex-direction:row;
-        flex-wrap: wrap;
-        justify-content: flex-start;
-        min-height: 50vh;
-        margin-left: 30px;
-    }
-
-    .item {
-        margin: 14px 0 0 20px;
-        padding: 10px;
-        border: 1px dotted black;
-        color: var(--header-background);
-        font-family: fantasy;
-        font-weight: bolder;
-        text-shadow: 8px -5px 4px  rgb(182, 182, 182);
-        height:20vh;
-        /* flex: 0 0 47%; */
-        max-width: 100%;
-        max-height: 100%;
-        min-width: 10vw;
-    }
-
-
-    /* project box change larger when hovering */
-    .item:hover {
-        margin:5px;
-        transform: scale(1.1,1.1);
-    }
-
-    .item1 {
-        background-image: url("https://images.unsplash.com/photo-1572177812156-58036aae439c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
-        background-repeat: no-repeat;
-        background-size: cover;
-        /* margin:30px 10px 10px 20px; */
-    }
-
-    .item2 {
-        background-image: url("https://images.unsplash.com/photo-1572177812156-58036aae439c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
-        background-repeat: no-repeat;
-        background-size: cover;
-       /* margin: 30px 30px 10px 0; */
-    }
-
-    .item3 {
-        background-image: url("https://images.unsplash.com/photo-1572177812156-58036aae439c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
-        background-repeat: no-repeat;
-        background-size: cover;
-        /* margin:0px 10px 10px 20px; */
-    }
-
-    .item4 {
-        background-image: url("https://images.unsplash.com/photo-1572177812156-58036aae439c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
-        background-repeat: no-repeat;
-        background-size: cover;
-        /* margin: 0px 30px 10px 0; */
-    }
 
 img{
     margin-left: 40px;
@@ -420,17 +245,61 @@ img{
     max-width: 100%;
     max-height: 100%;
     border: 6px groove rgb(234, 222, 222);
-    }
+  }
 
-    #contact {
-        color: black;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        font-size: 12px;
-        margin-left: 80px;
-        /* text-decoration: underline; */
-        font-style: oblique;
-    }
+footer {
+    background-color: var(--backgroud-color);
+    color: #bbb;
+    line-height: 1.2;
+  }
 
+footer a {
+    text-decoration: none;
+    color: rgb(240, 240, 223);
+  }
+
+a:hover {
+    text-decoration: underline;
+  }
+
+.ft-title {
+    color: #fff;
+    font-family: ’Merriweather’, serif;
+    font-size: 1.2rem;
+    padding-bottom: 0.625rem;
+    font-style: oblique;
+  }
+
+.ft-main {
+    padding: 1.25rem 1.875rem;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+.ft-main-item {
+    padding: 1.25rem;
+    min-width: 12.5rem ;
+  } 
+
+.ft-info {
+    /* padding: 0.9375rem 1.875rem; */
+    background-color:var(--hightlight-color);
+  }
+
+.ft-info-list {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+.ft-info-list li {
+    margin: 0.125rem 0.625rem;
+    white-space: nowrap;
+  }
+
+/* one before the last child */
+.ft-info-list li:nth-last-child(2) {
+flex: 1;      }
 
     @media screen and (max-width: 768px) {
       main,
@@ -451,16 +320,16 @@ img{
       .ft-main {
           justify-content: space-around;
       }
-  }
-  @media only screen and (min-width: 77.5rem /*1240px*/ ) {
+    }
+    @media only screen and (min-width: 77.5rem /*1240px*/ ) {
       .ft-main {
           justify-content: space-evenly;
       }
-  }
-
-  @media screen and (max-height: 2022px) {
-    body{
-      width: auto;
-      /* height: 200%; */
     }
-  }
+
+    @media screen and (max-height: 2022px) {
+      body{
+        width: auto;
+        /* height: 200%; */
+      }
+    }
