--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,8 +164,7 @@ nav a:hover {
   }
 
 .menu-content1 img {
-
-  margin: 30px;
+  margin: 35px;
   width:80%;
   height: 20%;
   max-width: 100%;
@@ -187,6 +186,16 @@ nav a:hover {
     width: 70%;
   }
 
+.menu-content2 img{
+    margin-left: 40px;
+    margin-top: 3px;
+    width:auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    border: 6px groove rgb(234, 222, 222);
+  }
+
 main p {
     margin: 50px 10px 0 10px;
     text-align: justify;
@@ -203,6 +212,7 @@ main p {
     min-height: 65vh;
     margin-left: 5%;
     margin-right: 5%;
+    vertical-align: middle;
   }
 
 .project {
@@ -246,16 +256,6 @@ main p {
     box-shadow: inset 0px 0px 25px
     var(--backgroud-color), 0 0 25px
     var(--hightlight-color);
-  }
-
-.menu-content2 img{
-    margin-left: 40px;
-    margin-top: 3px;
-    width:60%;
-    height: auto;
-    max-width: 100%;
-    max-height: 100%;
-    border: 6px groove rgb(234, 222, 222);
   }
 
 footer {
@@ -318,17 +318,17 @@ flex: 1;      }
         flex-direction: column;
       }
     }
-/* 
-    @media screen and (max-width: 768px) {
-      .item{
-        max-width: 100%;
-      }
-    } */
 
     @media screen and (max-width: 768px) {
       .menu{
         /* display:flex; */
         flex-direction: column;
+      }
+      .menu-content1{
+        width: 100%;
+      }
+      .menu-content2{
+        width: 100%;
       }
     }
 
@@ -343,9 +343,8 @@ flex: 1;      }
       }
     }
 
-    @media screen and (max-height: 2022px) {
+    /* @media screen and (max-width: 768px) {
       body{
         width: auto;
         /* height: 200%; */
-      }
-    }
+      
