--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,6 +191,7 @@ nav a:hover {
     max-width: 100%;
     max-height: 100%;
     border: 6px groove rgb(234, 222, 222);
+    position：absolute；
   }
 
 main p {
