--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,14 +184,14 @@ nav a:hover {
 
 .menu-content2 img{
     margin: 0;
-    /* margin-left: 40px;
-    margin-top: 3px; */
+    margin-left: 40px;
+    margin-top: 3px;
     width:auto;
     height: auto;
     max-width: 100%;
     max-height: 100%;
     border: 6px groove rgb(234, 222, 222);
-    position：absolute；
+
   }
 
 main p {
