--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,10 +186,10 @@ nav a:hover {
     margin: 0;
     margin-left: 40px;
     margin-top: 3px;
-    width:auto;
-    height: auto;
-    max-width: 100%;
-    max-height: 100%;
+    width:70%;
+    height: 70%;
+    max-width: 70%;
+    max-height: 70%;
     border: 6px groove rgb(234, 222, 222);
 
   }
